Fix spacings

--- a/TheatreCMS3/Content/Site.css
+++ b/TheatreCMS3/Content/Site.css
@@ -553,6 +553,7 @@ footer {
     margin: 0 10%;
     color: var(--dark-color);
     font-weight: 500;
+    width: 400px;
 }
 
 .comment-list i {
